--- a/views/jobPostings.hbs
+++ b/views/jobPostings.hbs
@@ -1,3 +1,12 @@
+{{!-- -- --------------------------------------------------------------------
+-- Citation for the following file:
+-- Date: 08/04/2024
+-- Adapted from OSU-CS340-ecampus nodejs-starter-app files
+-- Templates updated for the subject database.
+-- Modified to include additional functionality, styling, and forms.
+-- Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app
+-- -------------------------------------------------------------------- --}}
+
 {{!-- jobPostings.hbs --}}
 
 <head>
